implement clerk logic and email credentials issuance

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,8 @@
 APP_PORT=3200
+DATABASE_HOSTNAME=x
+DATABASE_PORT=x
+DATABASE_USER=x
+DATABASE_PASSWORD=x
+DATABASE_NAME=x
+CLERK_SECRET_KEY=x
+EC_PRIVATE_KEY_JSON=x
