--- a/package.json
+++ b/package.json
@@ -19,16 +19,33 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "ts-node ./node_modules/typeorm/cli.js -d ./typeorm.config.ts",
+    "typeorm:run-migrations": "npm run typeorm migration:run",
+    "typeorm:generate-migration": "npm run typeorm -- migration:generate ./src/migrations/$npm_config_name",
+    "typeorm:create-migration": "ts-node ./node_modules/typeorm/cli migration:create ./src/migrations/$npm_config_name",
+    "typeorm:revert-migration": "npm run typeorm -- migration:revert"
   },
   "dependencies": {
+    "@clerk/clerk-sdk-node": "4.13.6",
     "@nestjs/common": "10.0.0",
+    "@nestjs/config": "3.1.1",
     "@nestjs/core": "10.0.0",
     "@nestjs/platform-express": "10.0.0",
+    "@nestjs/schedule": "4.0.0",
+    "@nestjs/terminus": "10.2.0",
+    "@nestjs/typeorm": "10.0.1",
+    "class-transformer": "0.5.1",
     "cross-env": "7.0.3",
+    "dotenv": "16.3.1",
+    "jose": "5.2.0",
+    "pg": "8.11.3",
+    "postgresql": "0.0.1",
     "reflect-metadata": "0.1.13",
     "rimraf": "5.0.5",
-    "rxjs": "7.8.1"
+    "rxjs": "7.8.1",
+    "typeorm": "0.3.19",
+    "uuid": "9.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "10.0.0",
