--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       DATABASE_PASSWORD: ${DATABASE_PASSWORD}
       DATABASE_NAME: ${DATABASE_NAME}
       EC_PRIVATE_KEY_JSON: ${EC_PRIVATE_KEY_JSON}
+      CERT_SECRET_KEY: ${CERT_SECRET_KEY}
       APP_PORT: 3200
     volumes:
         - .:/usr/src/app
