change env variable for signature key

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       DATABASE_USER: ${DATABASE_USER}
       DATABASE_PASSWORD: ${DATABASE_PASSWORD}
       DATABASE_NAME: ${DATABASE_NAME}
-      EC_PRIVATE_KEY_JSON: ${EC_PRIVATE_KEY_JSON}
+      SIGNATURE_KEY: ${SIGNATURE_KEY}
       CERT_SECRET_KEY: ${CERT_SECRET_KEY}
       APP_PORT: 3200
     volumes:
