--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -11,7 +11,7 @@ services:
       DATABASE_USER: ${DATABASE_USER}
       DATABASE_PASSWORD: ${DATABASE_PASSWORD}
       DATABASE_NAME: ${DATABASE_NAME}
-      EC_PRIVATE_KEY_JSON: ${EC_PRIVATE_KEY_JSON}
+      SIGNATURE_KEY: ${SIGNATURE_KEY}
       CERT_SECRET_KEY: ${CERT_SECRET_KEY}
     volumes:
       - ./:/code
