change vc signature key structure

--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,7 @@ DATABASE_USER=x
 DATABASE_PASSWORD=x
 DATABASE_NAME=x
 CLERK_SECRET_KEY=x
-SIGNATURE_KEY=x
+SIGNATURE_KEY_D=x
+SIGNATURE_KEY_X=x
+SIGNATURE_KEY_Y=x
 CERT_SECRET_KEY=x
