--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -11,7 +11,9 @@ services:
       DATABASE_USER: ${DATABASE_USER}
       DATABASE_PASSWORD: ${DATABASE_PASSWORD}
       DATABASE_NAME: ${DATABASE_NAME}
-      SIGNATURE_KEY: ${SIGNATURE_KEY}
+      SIGNATURE_KEY_D: ${SIGNATURE_KEY_D}
+      SIGNATURE_KEY_X: ${SIGNATURE_KEY_X}
+      SIGNATURE_KEY_Y: ${SIGNATURE_KEY_Y}
       CERT_SECRET_KEY: ${CERT_SECRET_KEY}
     volumes:
       - ./:/code
