--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,9 @@ services:
       DATABASE_USER: ${DATABASE_USER}
       DATABASE_PASSWORD: ${DATABASE_PASSWORD}
       DATABASE_NAME: ${DATABASE_NAME}
-      SIGNATURE_KEY: ${SIGNATURE_KEY}
+      SIGNATURE_KEY_D: ${SIGNATURE_KEY_D}
+      SIGNATURE_KEY_X: ${SIGNATURE_KEY_X}
+      SIGNATURE_KEY_Y: ${SIGNATURE_KEY_Y}
       CERT_SECRET_KEY: ${CERT_SECRET_KEY}
       APP_PORT: 3200
     volumes:
