--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       DATABASE_USER: ${DATABASE_USER}
       DATABASE_PASSWORD: ${DATABASE_PASSWORD}
       DATABASE_NAME: ${DATABASE_NAME}
+      CLERK_SECRET_KEY: ${CLERK_SECRET_KEY}
       SIGNATURE_KEY_D: ${SIGNATURE_KEY_D}
       SIGNATURE_KEY_X: ${SIGNATURE_KEY_X}
       SIGNATURE_KEY_Y: ${SIGNATURE_KEY_Y}
