--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "typeorm:run-migrations": "npm run typeorm migration:run",
     "typeorm:generate-migration": "npm run typeorm -- migration:generate ./src/migrations/$npm_config_name",
     "typeorm:create-migration": "ts-node ./node_modules/typeorm/cli migration:create ./src/migrations/$npm_config_name",
-    "typeorm:revert-migration": "npm run typeorm -- migration:revert"
+    "typeorm:revert-migration": "npm run typeorm -- migration:revert",
+    "mig:gen": "./scripts/generate_migration.sh",
+    "mig:up": "./scripts/migration_up.sh",
+    "mig:down": "./scripts/migration_down.sh"
   },
   "dependencies": {
     "@clerk/clerk-sdk-node": "4.13.6",
@@ -39,6 +42,7 @@
     "class-transformer": "0.5.1",
     "cross-env": "7.0.3",
     "dotenv": "16.3.1",
+    "ethereumjs-util": "7.1.5",
     "jose": "5.2.0",
     "pg": "8.11.3",
     "postgresql": "0.0.1",
