--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@clerk/clerk-sdk-node": "4.13.6",
+    "@nestjs/axios": "3.0.2",
     "@nestjs/common": "10.0.0",
     "@nestjs/config": "3.1.1",
     "@nestjs/core": "10.0.0",
