--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "dotenv": "16.3.1",
     "ethereumjs-util": "7.1.5",
     "jose": "5.2.0",
+    "keygen": "0.4.0",
     "pg": "8.11.3",
     "postgresql": "0.0.1",
     "reflect-metadata": "0.1.13",
