change private key for VC issuance

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,5 @@ SIGNATURE_KEY_X=x
 SIGNATURE_KEY_Y=x
 CERT_SECRET_KEY=x
 TERMS_AND_CONDITIONS_URL=x
+CREDENTIAL_X5C_HEADER=x
+HALCOM_CERT_P12_PASSWORD=x
