--- a/package.json
+++ b/package.json
@@ -40,7 +40,10 @@
     "@nestjs/serve-static": "4.0.0",
     "@nestjs/terminus": "10.2.0",
     "@nestjs/typeorm": "10.0.1",
+    "@peculiar/x509": "1.9.7",
+    "base-x": "4.0.0",
     "class-transformer": "0.5.1",
+    "class-validator": "0.14.1",
     "cross-env": "7.0.3",
     "dotenv": "16.3.1",
     "ethereumjs-util": "7.1.5",
