--- a/package.json
+++ b/package.json
@@ -32,15 +32,18 @@
   "dependencies": {
     "@clerk/clerk-sdk-node": "4.13.6",
     "@nestjs/axios": "3.0.2",
-    "@nestjs/common": "10.0.0",
-    "@nestjs/config": "3.1.1",
-    "@nestjs/core": "10.0.0",
-    "@nestjs/platform-express": "10.0.0",
-    "@nestjs/schedule": "4.0.0",
-    "@nestjs/serve-static": "4.0.0",
-    "@nestjs/terminus": "10.2.0",
-    "@nestjs/typeorm": "10.0.1",
+    "@nestjs/common": "10.3.9",
+    "@nestjs/config": "3.2.2",
+    "@nestjs/core": "10.3.9",
+    "@nestjs/jwt": "10.2.0",
+    "@nestjs/mapped-types": "2.0.5",
+    "@nestjs/passport": "10.0.3",
+    "@nestjs/platform-express": "10.3.9",
+    "@nestjs/schedule": "4.0.2",
+    "@nestjs/terminus": "10.2.3",
+    "@nestjs/typeorm": "10.0.2",
     "@peculiar/x509": "1.9.7",
+    "axios": "1.7.2",
     "base-x": "4.0.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
@@ -48,7 +51,7 @@
     "dotenv": "16.3.1",
     "ethereumjs-util": "7.1.5",
     "jose": "5.2.0",
-    "jsonwebtoken": "^9.0.2",
+    "jsonwebtoken": "9.0.2",
     "keygen": "0.4.0",
     "pg": "8.11.3",
     "postgresql": "0.0.1",
@@ -59,9 +62,9 @@
     "uuid": "9.0.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "10.0.0",
-    "@nestjs/schematics": "10.0.0",
-    "@nestjs/testing": "10.0.0",
+    "@nestjs/cli": "10.3.2",
+    "@nestjs/schematics": "10.1.1",
+    "@nestjs/testing": "10.3.9",
     "@types/express": "4.17.17",
     "@types/jest": "29.5.2",
     "@types/node": "20.3.1",
