--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -5,7 +5,7 @@ services:
     build:
       context: .
     environment:
-      APP_PORT: 3100
+      APP_PORT: ${APP_PORT}
       DATABASE_HOSTNAME: ${DATABASE_HOSTNAME}
       DATABASE_PORT: ${DATABASE_PORT}
       DATABASE_USER: ${DATABASE_USER}
@@ -16,6 +16,8 @@ services:
       SIGNATURE_KEY_X: ${SIGNATURE_KEY_X}
       SIGNATURE_KEY_Y: ${SIGNATURE_KEY_Y}
       CERT_SECRET_KEY: ${CERT_SECRET_KEY}
+      HALCOM_CERT_PRIVATE_KEY: ${HALCOM_CERT_PRIVATE_KEY}
+      TERMS_AND_CONDITIONS_URL: ${TERMS_AND_CONDITIONS_URL}
     volumes:
       - ./:/code
     ports:
