export credentials by liccium clerk token api implementation

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,6 @@ CERT_SECRET_KEY=x
 TERMS_AND_CONDITIONS_URL=x
 CREDENTIAL_X5C_HEADER=x
 HALCOM_CERT_P12_PASSWORD=x
+LICCIUM_CLERK_KEYS_KID=x
+LICCIUM_CLERK_KEYS_N=x
+LICCIUM_CLERK_KEYS_E=x
