--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -16,6 +16,9 @@ services:
       SIGNATURE_KEY_X: ${SIGNATURE_KEY_X}
       SIGNATURE_KEY_Y: ${SIGNATURE_KEY_Y}
       CERT_SECRET_KEY: ${CERT_SECRET_KEY}
+      LICCIUM_CLERK_KEYS_KID: ${LICCIUM_CLERK_KEYS_KID}
+      LICCIUM_CLERK_KEYS_N: ${LICCIUM_CLERK_KEYS_N}
+      LICCIUM_CLERK_KEYS_E: ${LICCIUM_CLERK_KEYS_E}
       HALCOM_CERT_PRIVATE_KEY: ${HALCOM_CERT_PRIVATE_KEY}
       TERMS_AND_CONDITIONS_URL: ${TERMS_AND_CONDITIONS_URL}
     volumes:
