--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,9 @@ services:
       SIGNATURE_KEY_D: ${SIGNATURE_KEY_D}
       SIGNATURE_KEY_X: ${SIGNATURE_KEY_X}
       SIGNATURE_KEY_Y: ${SIGNATURE_KEY_Y}
+      LICCIUM_CLERK_KEYS_KID: ${LICCIUM_CLERK_KEYS_KID}
+      LICCIUM_CLERK_KEYS_N: ${LICCIUM_CLERK_KEYS_N}
+      LICCIUM_CLERK_KEYS_E: ${LICCIUM_CLERK_KEYS_E}
       CERT_SECRET_KEY: ${CERT_SECRET_KEY}
       APP_PORT: 3200
     volumes:
